apps/base/ggprohn/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ggprohn
  namespace: ggprohn-system
  labels:
    app.kubernetes.io/name: ggpron 
spec:
  parentRefs:
    - name: cloudflare-gateway
      namespace: cfgate-system
      sectionName: https
  hostnames:
    - "ggprohn.g-space.co.za"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ggprohn
          port: 80
